--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ build/
 venv/
 *.egg-info/
 
+# Deployment secrets (don't commit SSH keys or sensitive configs)
+deploy/cloud-init-user-data-custom.yml
+deploy/*.tfvars
+
 # IDE
 .vscode/
 .idea/
