--- a/deploy/cloud-init-network.yml
+++ b/deploy/cloud-init-network.yml
@@ -13,15 +13,15 @@ ethernets:
     dhcp4: no
     dhcp6: no
     addresses:
-      - 192.168.1.234/24  # Static IP address with subnet mask
+      - 192.168.1.234/24  # Static IP address with subnet mask TODO: Change here
     # Optional IPv6 address
     # - "2001:db8::1/64"
     routes:
       - to: default
-        via: 192.168.1.1  # Default gateway
+        via: 192.168.1.1  # Default gateway TODO: Change here
     nameservers:
       addresses:
         - 8.8.8.8          # Primary DNS
-        - 8.8.4.4          # Secondary DNS
+        - 192.168.1.18     # Secondary DNS #TODO: Change here (currently local dns server specific to my environment) 
       search:
         - local            # DNS search domain
