Add debug print functionality as new 'print' mode
Implemented TCP-based debug print servers accessible from remote clients, supporting three methods:
- RTT (J-Link): JLinkRTTClient with telnet server
- SWDIO (wlink): wlink serial output via socat TCP bridge
- USB UART: Serial device bridged via socat (future)

Key features:
- New 'print' mode alongside existing 'flash' and 'debug' modes
- Auto-restart on target power cycle (handles MCU disconnect/reconnect)
- Remote access via telnet (binds to 0.0.0.0, not localhost)
- Port allocation: rtt_base (9090) + probe_id
- Exclusive probe locking (one mode per probe at a time)

Changes:
- config.yml: Added rtt_base port, print commands for nrf52840 (JLink) and ch32v (wlink)
- config_loader.py: Added rtt_base_port property and get_probe_device_path()
- debug_dispatcher.py: Added print mode execution with auto-restart loop, RTT port calculation, cleanup for print servers
- server.py: Added 'print' to mode validation
- docker/*/Dockerfile: Added socat for serial-to-TCP bridging

Client usage:
  curl -X POST http://192.168.1.234:8080/dispatch -F "target=nrf52840" -F "probe=1" -F "mode=print"
  telnet 192.168.1.234 9091

--- a/config.yml
+++ b/config.yml
@@ -75,6 +75,7 @@ targets:
           q
           EOF
           JLinkExe -CommandFile /tmp/flash_nrf.jlink
+        print: "JLinkRTTClient -Device nRF52840_xxAA -if SWD -Speed 4000 -Select USB={serial} -RTTTelnetPort {rtt_port}"
       cmsis-dap:
         debug: "openocd -f interface/cmsis-dap.cfg -f target/nrf52.cfg -c 'adapter serial {serial}' -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'tcl_port disabled' -c 'bindto 0.0.0.0'"
         flash: "openocd -f interface/cmsis-dap.cfg -f target/nrf52.cfg -c 'adapter serial {serial}' -c 'program {firmware_path} verify reset exit'"
@@ -109,12 +110,12 @@ targets:
     compatible_probes: [wch-link]
     commands:
       wch-link:
-        # WCH OpenOCD for programming and debugging
         flash: "openocd -f wch-riscv.cfg -c 'program {firmware_path} verify reset exit'"
         debug: "openocd -f wch-riscv.cfg -c 'gdb_port 3333' -c 'telnet_port 4444'"
-        # Note: wlink can be used separately for SWDIO debug printing: wlink serial
+        print: "wlink serial | socat STDIN TCP-LISTEN:{rtt_port},reuseaddr,fork,bind=0.0.0.0"
 
 # Port allocation
 ports:
   gdb_base: 3330
   telnet_base: 4440
+  rtt_base: 9090  # Base port for RTT/print output (accessible from remote clients)
