fixed esp32 openocd path

--- a/docker/esp32/Dockerfile
+++ b/docker/esp32/Dockerfile
@@ -1,5 +1,9 @@
 FROM espressif/idf:release-v5.1
 
+# Add ESP-IDF OpenOCD to PATH
+ENV PATH="/opt/esp/tools/openocd-esp32/v0.12.0-esp32-20250707/openocd-esp32/bin:${PATH}"
+ENV OPENOCD_SCRIPTS="/opt/esp/tools/openocd-esp32/v0.12.0-esp32-20250707/openocd-esp32/share/openocd/scripts"
+
 # Install OpenOCD for ESP32 (already included in espressif/idf)
 # The base image comes with openocd-esp32 pre-installed
 
