refactor: isolate probe sessions with per-probe containers and persistent locks
- switch dispatch execution to per-probe container instances (<base>-p<probe_id>)
- add lock monitor to keep probe lock alive during debug/print session lifetime
- generate docker-compose.probes.yml from config and merge override build args
- update systemd/setup flow to use generated per-probe compose file
- fix broken Mermaid topology syntax and align docs with new runtime model
- move deployment guide under docs and update all references

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ deploy/*.tfvars
 
 # Docker secrets and credentials
 docker-compose.override.yml
+docker-compose.probes.yml
 .git-token
 .github-token
 *.secret
