--- a/deploy/systemd/debug-probe-hub-setup.service
+++ b/deploy/systemd/debug-probe-hub-setup.service
@@ -7,13 +7,14 @@ Requires=docker.service debug-probe-hub-pre-setup.service
 
 [Service]
 Type=oneshot
-User=kazcomy
-Group=kazcomy
+User=debug
+Group=debug
 WorkingDirectory=/opt/debug-probe-hub
 Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 # Build Docker images only
-ExecStart=/usr/bin/docker-compose build
+ExecStart=/usr/bin/python3 /opt/debug-probe-hub/generate_docker_compose_probes.py --output /opt/debug-probe-hub/docker-compose.probes.yml
+ExecStart=/usr/bin/docker-compose -f /opt/debug-probe-hub/docker-compose.probes.yml build
 
 # No restart - this is a one-time setup
 RemainAfterExit=yes
